--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
             <h1 class="page-header">PDF Thumbnails
                 <small>Examples</small>
             </h1>
-            <p>PDF Thumbnails is a small script to parse html files and generate a source image  for `img` elements
-                with a `data-pdf-thumbnail-file` attribute linking to a pdf file.
-                The image is a preview of the first page of the pdf. The script relies on the <a href="https://github.com/mozilla/pdf.js">pdf.js</a> library.
-                Here is the <a href="example.pdf">example pdf</a> used for the thumbnails of this page.
-            </p>
 
         </div>
     </div>
@@ -50,20 +45,20 @@
         </div>
         <div class="col-sm-3">
             <h4>col-sm-3</h4>
-            <a href="example.pdf">
-                <img class="img-responsive" data-pdf-thumbnail-file="example.pdf" src="pdf.png">
+            <a href="Readers_Digest.pdf">
+                <img class="img-responsive" data-pdf-thumbnail-file="Readers_Digest.pdf" src="pdf.png">
             </a>
         </div>
         <div class="col-sm-2">
             <h4>col-sm-2</h4>
-            <a href="example.pdf">
-                <img class="img-responsive" data-pdf-thumbnail-file="example.pdf" src="pdf.png">
+            <a href="Readers_Digest.pdf">
+                <img class="img-responsive" data-pdf-thumbnail-file="Readers_Digest.pdf" src="pdf.png">
             </a>
         </div>
         <div class="col-sm-1">
             <h4>col-sm-1</h4>
-            <a href="example.pdf">
-                <img class="img-responsive" data-pdf-thumbnail-file="example.pdf" src="pdf.png">
+            <a href="Readers_Digest.pdf">
+                <img class="img-responsive" data-pdf-thumbnail-file="Readers_Digest.pdf" src="pdf.png">
             </a>
         </div>
     </div>
@@ -76,20 +71,20 @@
         </div>
         <div class="col-sm-4">
             <h4>data-pdf-thumbnail-width="200"</h4>
-            <a href="example.pdf">
-                <img data-pdf-thumbnail-file="example.pdf" data-pdf-thumbnail-width="200" width="200" src="pdf.png">
+            <a href="Readers_Digest.pdf">
+                <img data-pdf-thumbnail-file="Readers_Digest.pdf" data-pdf-thumbnail-width="200" width="200" src="pdf.png">
             </a>
         </div>
         <div class="col-sm-4">
             <h4>data-pdf-thumbnail-height="200"</h4>
-            <a href="example.pdf">
-                <img data-pdf-thumbnail-file="example.pdf" data-pdf-thumbnail-height="200"  height="200" src="pdf.png">
+            <a href="Readers_Digest.pdf">
+                <img data-pdf-thumbnail-file="Readers_Digest.pdf" data-pdf-thumbnail-height="200"  height="200" src="pdf.png">
             </a>
         </div>
         <div class="col-sm-4">
             <h4>data-pdf-thumbnail-width="200" AND data-pdf-thumbnail-height="200"</h4>
-            <a href="example.pdf">
-                <img data-pdf-thumbnail-file="example.pdf" data-pdf-thumbnail-width="200" data-pdf-thumbnail-height="200" width="200" src="pdf.png">
+            <a href="Readers_Digest.pdf">
+                <img data-pdf-thumbnail-file="Readers_Digest.pdf" data-pdf-thumbnail-width="200" data-pdf-thumbnail-height="200" width="200" src="pdf.png">
             </a>
         </div>
     </div>
